--- a/src/index.html
+++ b/src/index.html
@@ -37,42 +37,42 @@
 			<section class="tiles tiles--rotated" id="grid2">
 				<div class="tiles__wrap">
 					<div class="tiles__line" data-scroll data-scroll-speed="1" data-scroll-target="#grid2" data-scroll-direction="horizontal">
-						<div class="tiles__line-img"></div>
-						<div class="tiles__line-img"></div>
-						<div class="tiles__line-img"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/4.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/5.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/6.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/365.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/711.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/777.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/bet mgm.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/betcity.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/betnation.svg')"></div>
 					</div>
 					<div class="tiles__line" data-scroll data-scroll-speed="-1" data-scroll-target="#grid2" data-scroll-direction="horizontal">
-						<div class="tiles__line-img"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/8.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/9.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/10.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/11.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/12.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/bingoal.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/circus.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/comeon.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/fairplay casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/ggpoker.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/gokkerz-emblem.svg')"></div>
 					</div>
 					<div class="tiles__line" data-scroll data-scroll-speed="1" data-scroll-target="#grid2" data-scroll-direction="horizontal">
-						<div class="tiles__line-img" style="background-image:url(img/demo1/13.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/14.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/15.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/16.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/17.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/18.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/goldrun casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/hardrock casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/holland casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/hommerson.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/jacks casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/kansino.svg')"></div>
 					</div>
 					<div class="tiles__line" data-scroll data-scroll-speed="-1" data-scroll-target="#grid2" data-scroll-direction="horizontal">
-						<div class="tiles__line-img" style="background-image:url(img/demo1/19.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/20.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/21.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/22.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/23.jpg)"></div>
-						<div class="tiles__line-img"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/leovegas.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/lucky 7 casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/one casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/scori pro.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/tonybet.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/toto.svg')"></div>
 					</div>
 					<div class="tiles__line" data-scroll data-scroll-speed="1" data-scroll-target="#grid2" data-scroll-direction="horizontal">
-						<div class="tiles__line-img"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/26.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/27.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/28.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/unibet.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/vbet.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/winnit.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/ze bet.svg')"></div>
 						<div class="tiles__line-img"></div>
 						<div class="tiles__line-img"></div>
 					</div>
@@ -84,28 +84,28 @@
 			<section class="tiles" id="grid">
 				<div class="tiles__wrap">
 					<div class="tiles__line" data-scroll data-scroll-speed="1" data-scroll-target="#grid" data-scroll-direction="horizontal">
-						<div class="tiles__line-img" style="background-image:url(img/demo1/30.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/29.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/28.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/27.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/26.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/25.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/365.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/711.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/777.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/bet mgm.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/betcity.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/betnation.svg')"></div>
 					</div>
 					<div class="tiles__line" data-scroll data-scroll-speed="2" data-scroll-target="#grid" data-scroll-direction="horizontal">
-						<div class="tiles__line-img" style="background-image:url(img/demo1/24.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/23.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/22.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/19.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/18.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/17.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/bingoal.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/circus.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/comeon.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/fairplay casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/ggpoker.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/gokkerz-emblem.svg')"></div>
 					</div>
 					<div class="tiles__line" data-scroll data-scroll-speed="1" data-scroll-target="#grid" data-scroll-direction="horizontal">
-						<div class="tiles__line-img" style="background-image:url(img/demo1/16.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/15.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/14.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/13.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/12.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo1/11.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/goldrun casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/hardrock casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/holland casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/hommerson.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/jacks casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/kansino.svg')"></div>
 					</div>
 				</div>
 			</section>
@@ -119,24 +119,42 @@
 			<section class="tiles tiles--columns" id="grid3">
 				<div class="tiles__wrap">
 					<div class="tiles__line" data-scroll data-scroll-speed="1" data-scroll-target="#grid3" data-scroll-direction="vertical">
-						<div class="tiles__line-img" style="background-image:url(img/demo2/20.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo2/19.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo2/18.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/365.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/711.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/777.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/bet mgm.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/betcity.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/betnation.svg')"></div>
 					</div>
 					<div class="tiles__line" data-scroll data-scroll-speed="-1" data-scroll-target="#grid3" data-scroll-direction="vertical">
-						<div class="tiles__line-img" style="background-image:url(img/demo2/16.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo2/3.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo2/14.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/bingoal.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/circus.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/comeon.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/fairplay casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/ggpoker.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/gokkerz-emblem.svg')"></div>
 					</div>
 					<div class="tiles__line" data-scroll data-scroll-speed="1" data-scroll-target="#grid3" data-scroll-direction="vertical">
-						<div class="tiles__line-img" style="background-image:url(img/demo2/12.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo2/11.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo2/10.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/goldrun casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/hardrock casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/holland casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/hommerson.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/jacks casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/kansino.svg')"></div>
 					</div>
 					<div class="tiles__line" data-scroll data-scroll-speed="-1" data-scroll-target="#grid3" data-scroll-direction="vertical">
-						<div class="tiles__line-img" style="background-image:url(img/demo2/8.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo2/7.jpg)"></div>
-						<div class="tiles__line-img" style="background-image:url(img/demo2/6.jpg)"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/leovegas.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/lucky 7 casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/one casino.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/scori pro.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/tonybet.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/toto.svg')"></div>
+					</div>
+					<div class="tiles__line" data-scroll data-scroll-speed="1" data-scroll-target="#grid3" data-scroll-direction="vertical">
+						<div class="tiles__line-img" style="background-image:url('../casilogos/unibet.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/vbet.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/winnit.svg')"></div>
+						<div class="tiles__line-img" style="background-image:url('../casilogos/ze bet.svg')"></div>
 					</div>
 				</div>
 			</section>
